top position fix feature section mobile view scroll

--- a/index.css
+++ b/index.css
@@ -969,7 +969,7 @@ header .btn {
 
   .sticky_section {
     /* position: relative; */
-    top: 0.2rem;
+    top: 1rem;
   }
 
   .feature_section-cards {
